--- a/ElfIO.csproj
+++ b/ElfIO.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ElfSection.cs" />
     <Compile Include="ElfProgram.cs" />
     <Compile Include="ElfTypes.cs" />
+    <Compile Include="ElfXtensions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
